--- a/overview/concepts-architecture/feature-overview.mdx
+++ b/overview/concepts-architecture/feature-overview.mdx
@@ -1,174 +1,96 @@
 ---
-title: "Feature Overview"
-description: "Provides a concise walkthrough of GoogleTest’s headline features, including xUnit architecture, automatic test discovery, a rich suite of assertions, user-defined assertions, death test support, parameterized tests, and flexible test runners."
+title: "Feature Overview at a Glance"
+description: "Survey GoogleTest's core and advanced features in one place: test discovery, custom and built-in assertions, handling fatal/non-fatal failures, parameterized and typed tests, and flexible mocking. This page ensures both newcomers and advanced users have a clear map of what's possible."
 ---
 
-# Feature Overview
+# Feature Overview at a Glance
 
-GoogleTest offers a robust and intuitive mocking framework, enabling you to write expressive and maintainable tests in C++. This page provides a concise walkthrough of GoogleTest’s headline features that empower you to define sophisticated test behaviors and verify interactions effectively.
-
----
-
-## The xUnit Architecture
-
-GoogleTest follows the well-established xUnit test framework model. At its core, tests are organized into test cases containing individual test functions, promoting modular and isolated testing. This architecture supports extensibility, allowing advanced features such as parameterized tests, fixtures, and mocks to integrate seamlessly.
-
-## Automatic Test Discovery
-
-Forget manual registration of tests. GoogleTest automatically discovers all test cases and test functions in your codebase. This feature simplifies adding new tests and ensures comprehensive coverage without boilerplate.
-
-## Rich Suite of Assertions
-
-GoogleTest provides a comprehensive set of assertions to validate program correctness. From basic checks to advanced matchers, these assertions enable precise verification of test expectations and produce clear failure messages to speed up debugging.
-
-## User-Defined Assertions
-
-Extend the power of assertions with your own custom validations tailored to your types and domain logic. User-defined assertions help you express intent clearly and verify complex properties beyond built-in primitives.
-
-## Death Test Support
-
-GoogleTest supports death tests, allowing you to verify that certain code paths terminate the program in expected ways. This is particularly useful to test failure conditions, invalid input handling, or fatal error paths.
-
-## Parameterized Tests
-
-Write test logic once and run it against a variety of input data. Parameterized tests help improve test code reuse and make it easier to cover multiple scenarios systematically.
-
-## Flexible Test Runners
-
-GoogleTest offers flexible ways to run tests, including from the command line with numerous options for filtering, sharding, and output formats. This adaptability ensures that your tests fit into diverse workflows and CI environments.
+Discover the full spectrum of GoogleTest's powerful testing features, from automatic test discovery and rich built-in assertions to advanced parameterized tests and flexible mocking support through GoogleMock. Whether you're just getting started or are an advanced user, this one-stop overview provides a clear roadmap to unlocking GoogleTest's capabilities.
 
 ---
 
-## Real-World Usage Scenario
+## What Is This Page?
 
-Imagine you are developing a complex C++ application requiring precise verification of component interactions. You can leverage GoogleTest’s mocking framework to define expectations on mock objects using `EXPECT_CALL()`, specifying how many times methods are called, the sequence of calls, the specific arguments, and the return behaviors.
+This page presents a concise yet comprehensive survey of GoogleTest's core and advanced features. It focuses on enabling users to understand at a glance what the framework offers to help write, discover, and execute robust unit tests and mock objects.
 
-For example, define a mock class with `MOCK_METHOD()` macros to represent dependencies, then write tests that set up expectations and default behaviors using `EXPECT_CALL()` and `ON_CALL()`. You can verify that your code calls the methods correctly and handle different call sequences by using `Sequence` objects and clauses like `.InSequence()` or `.After()`.
+Instead of delving into setup or architecture details, it provides a clear summary of key testing patterns, assertion capabilities, parameterization techniques, failure handling mechanisms, and the integration of GoogleMock for mocks and expectations.
 
-### Example: Defining and Using Mocks
-```cpp
-class MockFoo {
-public:
-  MOCK_METHOD(int, GetCount, (), (const, override));
-  MOCK_METHOD(void, Add, (int value), (override));
-};
+Armed with this feature map, you can quickly assess which tools and strategies to apply in your testing workflow.
 
-TEST(FooTest, UsesMockCorrectly) {
-  MockFoo mock;
+## Key Features & Capabilities
 
-  // Set expectation that Add() will be called twice with any int parameter
-  EXPECT_CALL(mock, Add(testing::_)).Times(2);
+### 1. Automatic Test Discovery
+GoogleTest automatically detects test cases and runs them without manual registration, streamlining the test execution flow.
 
-  // Set default behavior for GetCount()
-  ON_CALL(mock, GetCount()).WillByDefault(testing::Return(42));
+### 2. Built-in Assertions
+- **Rich Assertion Macros:** Use `EXPECT_` and `ASSERT_` macros to make various checks on values.
+- **Fatal vs Non-Fatal Failures:** Choose between stopping test execution immediately (`ASSERT_`) or continuing after failure (`EXPECT_`).
+- **Customizable Matchers:** Extend or use built-in matcher expressions to validate complex conditions.
 
-  // Use mock in code under test
-  mock.Add(10);
-  mock.Add(20);
-  EXPECT_EQ(42, mock.GetCount());
-}
-```
+### 3. Parameterized and Typed Tests
+- **Parameterized Tests:** Define test logic once and run it with multiple sets of input data.
+- **Typed Tests:** Run test templates over a list of types for broad type coverage with less code.
 
-This snippet shows how GoogleTest eases mocking by automatically generating the mock class methods and providing expressive ways to specify call expectations and behaviors.
+### 4. Flexible Mocking with GoogleMock
+- **Declarative Mock Creation:** Use `MOCK_METHOD` macros to mock virtual methods easily.
+- **Setting Expectations with `EXPECT_CALL`:** Specify how many times methods should be called, with what arguments, and in what order.
+- **Default Behavior via `ON_CALL`:** Define default actions without setting expectations.
+- **Controlling Call Strictness:** Use `NiceMock`, `NaggyMock`, or `StrictMock` to manage reactions to unexpected calls.
+- **Ordering Rules:** Enforce call orders with `InSequence` and `After` clauses.
+- **Advanced Actions:** Define custom actions, delegate to real or fake objects, and combine multiple actions.
 
----
+### 5. Failure Handling
+- **Clear Diagnostic Messages:** When tests fail, detailed reports including source location and mismatched expectations help debugging.
+- **Retiring Expectations:** Automatically manage expectation retirement for better state management.
 
-## Deep Dive into Headline Features
+## Real-World Usage Context
 
-### MOСK_METHOD: Defining Mocks with Ease
-- Define mock methods with precise signatures, including qualifiers like `const` or `override`.
-- Supports mocking overloaded and templated methods.
-- Handles move-only types such as `std::unique_ptr` seamlessly.
+Use this feature overview to design your tests and mocks intuitively:
 
-### EXPECT_CALL: Setting Clear Expectations
-- Define how often a method should be called (`Times` clause).
-- Specify call sequences using `.InSequence()` to enforce order.
-- Use `.After()` to define more complex ordering dependencies.
-- Attach actions with `.WillOnce()` and `.WillRepeatedly()` to control return values or side effects.
-- Use `.RetiresOnSaturation()` to automatically deactivate expectations after saturation to avoid unexpected call errors.
+- When needing simple assertion checks, rely on built-in macros for clear, concise tests.
+- For data-driven testing, employ parameterized tests to reduce duplication.
+- To isolate dependencies, create mocks with `MOCK_METHOD` and flexibly control behavior and call expectations.
+- Manage test robustness easily by controlling mock strictness levels.
 
-### ON_CALL: Setting Default Behavior
-- Specify default actions for mock methods without setting call count expectations.
-- Must specify behavior with `.WillByDefault()`.
-- Complements `EXPECT_CALL` by providing base method behaviors.
+Compare using GoogleTest with and without mocking infrastructure:
 
-### Matchers: Fine-Grained Argument Matching
-- Use predefined matchers like `_` (wildcard), `Eq()`, `Ge()`, and many more for matching arguments.
-- Combine multiple matchers with `AllOf()`, `AnyOf()`, and custom predicates.
-- Apply multi-argument matching with `.With()` clause for cross-argument conditions.
+| Scenario               | Without GoogleMock            | With GoogleMock                   |
+|------------------------|------------------------------|---------------------------------|
+| Dependency isolation   | Difficult to test independently | Mocks isolate dependencies effectively |
+| Verification of interactions | Limited or manual checks        | Rich expectation DSL automates verification |
+| Test maintenance      | Likely brittle, tightly coupled | More maintainable and adaptable |
 
-### Sequences and Partial Orders
-- Use `Sequence` or `InSequence` objects to express strict ordering between expectations.
-- Define partial order using multiple sequences for flexible test scenarios.
+## Practical Tips & Best Practices
 
-### Strictness Modifiers: Nice, Naggy, and Strict Mocks
-- `NiceMock`: Suppresses warnings on uninteresting calls, useful when you want quieter tests.
-- `NaggyMock` (default): Prints warnings on uninteresting calls.
-- `StrictMock`: Treats uninteresting calls as test failures, useful for enforcing strict interaction contracts.
-
-### Verification and Cleanup
-- Automatic verification of all expectations when mock objects are destructed.
-- Manual verification support via `Mock::VerifyAndClearExpectations()` and `Mock::VerifyAndClear()`.
-- Leak detection to catch mocks that are not properly deleted with detailed diagnostics.
-
----
-
-## Best Practices and Tips
-
-- **Use `EXPECT_CALL` only before exercising your code.** Changing expectations afterward leads to undefined behavior.
-- **Prefer `ON_CALL` for default behaviors and `EXPECT_CALL` for verifying calls.**
-- **When you want to ignore uninteresting calls, use `NiceMock`; for strict checks use `StrictMock`.**
-- **Use `.RetiresOnSaturation()` to prevent sticky expectations from causing errors after their call count is met.**
-- **Leverage `Sequence` and `.After()` to express call ordering requirements clearly.**
-- **For complex argument or behavior validation, use custom matchers and actions.**
-
----
-
-## Troubleshooting Common Scenarios
-
-### Uninteresting Calls Warnings
-Uninteresting calls occur when a mock method is called without any matching `EXPECT_CALL`. GoogleTest warns by default to alert you but allows the calls. Use `NiceMock` to suppress these warnings or define explicit expectations with `Times(AnyNumber())`.
-
-### Unexpected Calls Errors
-If a call does not match any active expectation, an error is reported immediately, helping catch unexpected or incorrect behavior.
-
-### Excessive Calls
-Calling a mock function more times than expected triggers a failure, unless an expectation allows unlimited calls with `Times(AnyNumber())` or a `WillRepeatedly()` action is defined.
-
-### Leaked Mocks
-GoogleTest detects mocks that are never deleted and reports failures. Use `Mock::AllowLeak()` to suppress if intentional, but generally, prefer proper mock lifecycle management.
-
----
+- Start with `ON_CALL` to specify default mock behaviors; use `EXPECT_CALL` for concrete interaction verification.
+- Use `NiceMock` to suppress warnings on irrelevant calls during tests.
+- Apply `StrictMock` only where every unexpected call is a test failure.
+- Structure expectations using sequences (`InSequence`) when call order matters.
+- Avoid over-specification to keep tests resilient against refactoring.
+- Delegate to real or fake objects when full mock behavior is complex.
 
 ## Getting Started Preview
 
-To begin exploring these features in depth:
+To begin applying these features:
 
-1. Visit the [Getting Started Guides](/guides/getting-started) to install and set up GoogleTest.
-2. Learn about [Defining Mock Classes](docs/gmock_cheat_sheet.md#MockClass) and [Setting Expectations](docs/gmock_cheat_sheet.md#ExpectCall).
-3. Explore the [Mocking Reference](reference/mocking.md) for detailed API descriptions.
-4. Study the [gMock Cookbook](docs/gmock_cook_book.md) for practical patterns and advanced techniques.
+1. Define your test cases using GoogleTest macros for assertions.
+2. Learn to write parameterized tests for reusable test logic.
+3. Create mock classes using `MOCK_METHOD` to simulate dependencies.
+4. Use `EXPECT_CALL` and `ON_CALL` to specify mock behaviors and expectations.
 
-
----
-
-> "With GoogleTest’s powerful mocking framework, you can assert with confidence that your code behaves exactly as designed ― interactions, sequences, and all."
-
----
-
-## Related Documentation
-
-- [Mocking Reference](reference/mocking.md)
-- [gMock Cheat Sheet](docs/gmock_cheat_sheet.md)
-- [gMock Cookbook](docs/gmock_cook_book.md)
-- [GoogleTest Overview](overview/introduction-value/what-is-googletest)
-- [Core Concepts & Terminology](overview/concepts-architecture/core-concepts-terminology)
+For step-by-step instructions and detailed explanations, proceed to:
+- [Configuring & Integrating GoogleTest](../getting-started/first-run-usage/configuration-integration)
+- [Your First Test & Mock](../getting-started/first-run-usage/writing-first-test)
+- [Mocking Reference](../docs/reference/mocking.md)
 
 ---
 
-## Additional Resources
+## References & Further Reading
 
-- GoogleTest GitHub Repository: [googletest](https://github.com/google/googletest)
-- Official GoogleTest Documentation: [https://google.github.io/googletest/](https://google.github.io/googletest/)
+- [What is GoogleTest?](../overview/getting-started-intro/product-introduction)
+- [Why Use GoogleTest? Key Benefits & Features](../overview/getting-started-intro/value-proposition-features)
+- [Mocking Reference](../docs/reference/mocking.md)
+- [gMock Cookbook](../docs/gmock_cook_book.md)
+- [Effective Use of Assertions](../guides/core-testing-patterns/assertions-best-practices)
 
----
+Explore these to deepen your understanding and mastery of GoogleTest's suite of features.
