--- a/guides/getting-started/setup-installation.mdx
+++ b/guides/getting-started/setup-installation.mdx
@@ -1,250 +1,226 @@
 ---
 title: "Installation and Setup"
-description: "Learn how to install and configure GoogleTest and GoogleMock within your C++ project using both CMake and Bazel, ensuring smooth integration into your build system."
+description: "Comprehensive steps for installing GoogleTest and GoogleMock, covering both Bazel and CMake build systems. Learn how to integrate the framework into new or existing C++ projects, configure build files, and verify your environment."
 ---
 
-# Installation and Setup of GoogleTest and GoogleMock
+# Installation and Setup of GoogleTest & GoogleMock
 
 ## Overview
-This guide walks you through the installation and configuration of **GoogleTest** and **GoogleMock** libraries within your C++ project. It focuses on integrating these testing frameworks using two common build systems:
-
-- **CMake**
-- **Bazel**
-
-Ensuring smooth integration into your build process allows you to write, build, and run tests efficiently with GoogleTest's powerful test and mock capabilities.
+This guide provides comprehensive, step-by-step instructions to install and set up GoogleTest and GoogleMock frameworks in your C++ projects. Whether you're using Bazel or CMake as your build system, you will learn how to integrate the frameworks into new or existing projects, configure your build files correctly, and verify the setup to ensure a smooth testing workflow.
 
 ---
 
-## Prerequisites
-Before starting, ensure you have the following prepared:
+## 1. Preparation and Prerequisites
 
-- A C++17-compliant compiler (refer to [Prerequisites & System Requirements](/getting-started/requirements-installation/prerequisites-system-requirements) for detailed info).
-- Installed build tools:
-  - For CMake builds: CMake 3.14 or higher
-  - For Bazel builds: Bazel installed and configured
-- A basic knowledge of your project's existing build system.
+Before starting the installation process, ensure your environment meets the following:
 
+- You have a functional C++ development environment (compiler, build tools).
+- For **CMake**, have CMake version 3.13 or higher installed.
+- For **Bazel**, ensure Bazel is installed and configured.
+- Basic familiarity with your chosen build system (Bazel or CMake).
+- Network access to clone the GoogleTest/GoogleMock repositories or download release packages.
 
-## Working with CMake
+<Tip>
+If you are setting up for the first time, review the [System Requirements & Prerequisites](https://github.com/google/googletest/blob/main/docs/setup-prerequisites/prerequisites-requirements.md) to confirm compatibility with your platform and tools.
+</Tip>
 
-### Step 1: Clone the Repository
-Clone the latest stable GoogleTest repository which includes GoogleMock by default.
+---
 
+## 2. Installation Steps
+
+GoogleTest and GoogleMock are usually installed together as they form a unified testing framework. GoogleMock depends on GoogleTest internally.
+
+### 2.1 Installation Using CMake
+
+#### Step 1: Clone the Repository
 ```bash
-git clone https://github.com/google/googletest.git -b main
-cd googletest
+git clone https://github.com/google/googletest.git
+git clone will fetch both Googletest and GoogleMock sources.
 ```
 
-### Step 2: Create a Build Directory
-Create and enter a separate directory to keep build files organized.
-
+#### Step 2: Create a Build Directory
 ```bash
-mkdir build
-cd build
+mkdir build && cd build
 ```
 
-### Step 3: Generate Build Files with CMake
-By default, GoogleMock is included. Run:
-
+#### Step 3: Configure the Build
 ```bash
-cmake ..
+cmake ../googletest
+```
+This configures both GoogleTest and GoogleMock projects.
+
+#### Step 4: Build the Framework
+```bash
+cmake --build . --config Release
 ```
 
-**Optional:** To build **only** GoogleTest without GoogleMock, use:
-
+#### Step 5: Install Libraries and Headers
+Use `make install` or equivalent for your platform, or:
 ```bash
-cmake .. -DBUILD_GMOCK=OFF
+cmake --install .
 ```
 
-### Step 4: Build the Libraries
-- On Linux/macOS, simply run:
-
-  ```bash
-  make
-  ```
-
-- On Windows with Visual Studio installed, open the generated solution file `.sln` and build.
-
-### Step 5: Install (Optional)
-If you want to install the compiled libraries to your system default path (usually `/usr/local/` on Unix-like systems):
-
-```bash
-sudo make install
-```
-
-### Step 6: Integrate GoogleTest & GoogleMock into Your Project
-You have two main options:
-
-#### Option A: Use Installed Libraries
-Use `find_package` in your `CMakeLists.txt`:
+#### Step 6: Link GoogleTest and GoogleMock to Your Project
+Update your `CMakeLists.txt` to include GoogleTest and GoogleMock headers and libraries. Example for your test executable:
 
 ```cmake
 find_package(GTest REQUIRED)
-
-add_executable(my_tests test1.cpp)
-target_link_libraries(my_tests GTest::gtest GTest::gmock_main)
+add_executable(my_tests test_main.cpp ...)
+target_link_libraries(my_tests GTest::gtest GTest::gtest_main GMock::gmock GMock::gmock_main pthread)
 ```
 
-*Ensure that the installed libraries and headers are discoverable by CMake.*
 
-#### Option B: Incorporate Source via `add_subdirectory`
-Embed GoogleTest source in your project and add:
+### 2.2 Installation Using Bazel
 
-```cmake
-add_subdirectory(path/to/googletest)
+GoogleTest and GoogleMock have native Bazel support.
 
-add_executable(my_tests test1.cpp)
-target_link_libraries(my_tests gtest gmock_main)
-```
+#### Step 1: Declare External Repositories
+Add the following in your `WORKSPACE` file:
 
-This approach ensures consistent compiler and linker flags across your project and GoogleTest.
-
-### Tips & Best Practices
-- For Visual Studio users, consider the `gtest_force_shared_crt` option to align runtime linkage and avoid linker errors:
-
-```cmake
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-```
-
-- Always ensure your compiler supports C++17, which GoogleTest requires.
-- Run `RUN_ALL_TESTS()` once in your `main()` function to avoid unexpected test behavior.
-
----
-
-## Working with Bazel
-
-### Step 1: Add GoogleTest and GoogleMock as Dependencies
-In your Bazel `WORKSPACE` file, declare the external repository:
-
-```python
+```starlark
 http_archive(
     name = "com_google_googletest",
-    urls = ["https://github.com/google/googletest/archive/main.zip"],
-    strip_prefix = "googletest-main",
+    urls = ["https://github.com/google/googletest/archive/release-<version>.zip"],
+    strip_prefix = "googletest-release-<version>",
 )
 ```
 
-### Step 2: Reference in BUILD files
-In your Bazel `BUILD` file, depend on the `gmock` and `gtest` targets:
+Adjust `<version>` to the desired release tag.
 
-```python
+#### Step 2: Use Targets in Your `BUILD` Files
+Depend on `@com_google_googletest//:gmock_main` or `:gtest_main`:
+
+```starlark
 cc_test(
     name = "my_test",
-    srcs = ["my_test.cc"],
-    deps = ["@com_google_googletest//googletest:gtest_main", "@com_google_googletest//googlemock:gmock_main"],
+    srcs = ["my_test.cpp"],
+    deps = ["@com_google_googletest//:gmock_main"],
 )
 ```
 
-### Step 3: Run Tests
-Use Bazel's test runner:
-
-```bash
-bazel test //path/to:my_test
-```
-
-This command builds and runs your tests using GoogleTest and GoogleMock seamlessly.
+This will build your test with GoogleMock and GoogleTest.
 
 ---
 
-## Verifying Your Setup
+## 3. Configuring the Build Files for Integration
 
-After installation and integration, verify with a minimal test:
+### Using CMake
+
+- **Include Directories**: GoogleMock and GoogleTest headers are normally found automatically via `find_package(GTest)`.
+- **Link Libraries**: Link your test targets against `gtest`, `gtest_main`, `gmock`, and `gmock_main` as appropriate.
+
+<Tip>
+Use `gmock_main` or `gtest_main` libraries if you prefer GoogleTest or GoogleMock's provided main() function, which calls `RUN_ALL_TESTS()` internally, so you don't have to write one yourself.
+</Tip>
+
+- If your project requires customized initialization, consider writing your own `main()` that calls `testing::InitGoogleMock(&argc, argv);` followed by `RUN_ALL_TESTS();`.
+
+### Using Bazel
+
+- Depend on `@com_google_googletest//:gmock_main` for both GoogleMock and GoogleTest with main() function included.
+- For just GoogleTest, depend on `@com_google_googletest//:gtest_main`.
+
+---
+
+## 4. Verifying Your Installation
+
+### Step 1: Write a Simple Test
+Create a simple test file `sample_test.cpp`:
 
 ```c++
-#include <gtest/gtest.h>
-#include <gmock/gmock.h>
+#include "gtest/gtest.h"
 
-TEST(SanityTest, GoogleTestWorks) {
-    EXPECT_EQ(1, 1);
-}
-
-int main(int argc, char** argv) {
-    testing::InitGoogleMock(&argc, argv);
-    return RUN_ALL_TESTS();
+TEST(SanityTest, BasicAssertions) {
+  EXPECT_EQ(7 * 6, 42);
 }
 ```
 
-Build and run this test. Successful execution confirms your setup is operational.
+### Step 2: Build the Test
+Follow your build system's normal build procedure, linking with GoogleTest or GoogleMock libraries.
+
+### Step 3: Run the Test
+Execute the test binary. You should see output similar to:
+
+```
+[==========] Running 1 test from 1 test suite.
+[----------] Global test environment set-up.
+[----------] 1 test from SanityTest
+[ RUN      ] SanityTest.BasicAssertions
+[       OK ] SanityTest.BasicAssertions (0 ms)
+[----------] 1 test from SanityTest (0 ms total)
+
+[----------] Global test environment tear-down
+[==========] 1 test from 1 test suite ran. (0 ms total)
+[  PASSED  ] 1 test.
+```
+
+<Tip>
+If you are using GoogleMock, initialize with `testing::InitGoogleMock()` instead of `InitGoogleTest()`, and link to `gmock_main` or provide your custom `main()`.
+</Tip>
 
 ---
 
-## Common Pitfalls and Solutions
+## 5. Troubleshooting Common Issues
 
-<AccordionGroup title="Troubleshooting Common Setup Issues">
-<Accordion title="Linker Errors with Runtime Libraries on Windows">
-When you encounter mismatches like `RuntimeLibrary MTd_StaticDebug vs MDd_DynamicDebug`, enable the dynamic CRT option:
+<AccordionGroup title="Common Issues and Resolutions">
+<Accordion title="Test Binary Not Linking or Missing main()">
+If your test binary fails to link due to missing `main()`, ensure you:
 
-```cmake
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+- Link against `gtest_main` or `gmock_main` libraries which provide main(), or
+- Write your own main that initializes and runs tests:
+
+```c++
+int main(int argc, char** argv) {
+  testing::InitGoogleMock(&argc, argv); // Or InitGoogleTest
+  return RUN_ALL_TESTS();
+}
 ```
-
-Rebuild GoogleTest and your project afterward.
 </Accordion>
-<Accordion title="Missing Headers or Libraries">
-Ensure your include paths and library link paths are correctly set. If you built GoogleTest separately, install it or adjust your build scripts accordingly.
+<Accordion title="Build Failures Due to Missing Includes">
+Make sure your include directories point to GoogleTest and GoogleMock headers. With CMake, use `find_package(GTest REQUIRED)` and link targets properly.
 </Accordion>
-<Accordion title="Compiler Compatibility Issues">
-Confirm your compiler supports at least C++17. GoogleTest and GoogleMock require this for modern features.
+<Accordion title="Tests Not Running or Not Found">
+Verify you have called `RUN_ALL_TESTS()` in your main function. Also, ensure your test files are compiled and linked into your test executable.
 </Accordion>
-<Accordion title="Calling RUN_ALL_TESTS Multiple Times">
-Only invoke `RUN_ALL_TESTS()` once in `main()`. Multiple invocations can cause unpredictable behavior and are unsupported.
+<Accordion title="Bazel Build Errors Related to Repository Setup">
+Double-check your `WORKSPACE` file contains the proper `http_archive` definitions with the correct URLs and strip prefixes matching the released versions.
 </Accordion>
 </AccordionGroup>
 
----
-
-## Additional Resources and Next Steps
-
-- Explore the [Writing Your First Test](/getting-started/first-test-validation/writing-your-first-test) guide to start writing tests.
-- Refer to the [Running & Validating Tests](/getting-started/first-test-validation/running-and-validating-tests) for more on test execution.
-- Consult [Troubleshooting Common Setup Issues](/getting-started/first-test-validation/troubleshooting-common-issues) for advanced help.
-- Consider [Exploring Beyond the Basics](/getting-started/next-steps-and-resources/exploring-beyond-basics) to harness advanced mocking patterns and test suite designs.
-
----
-
-## Summary
-Integrate GoogleTest and GoogleMock into your C++ project by choosing your build system—CMake or Bazel. Follow step-by-step instructions for cloning, building, and linking libraries, ensuring support for C++17 and platform-specific adjustments. Confirm your setup with example tests, and lean on troubleshooting tips to resolve common issues swiftly.
-
----
-
-## Example CMake Minimal Project Snippet
-
-```cmake
-cmake_minimum_required(VERSION 3.14)
-project(MyTestProject LANGUAGES CXX)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# Add GoogleTest as a subdirectory
-add_subdirectory(path/to/googletest)
-
-add_executable(my_tests my_tests.cpp)
-target_link_libraries(my_tests gtest gmock_main)
-```
-
-## Example Bazel Minimal BUILD Snippet
-
-```python
-cc_test(
-    name = "my_tests",
-    srcs = ["my_tests.cpp"],
-    deps = ["@com_google_googletest//googletest:gtest_main", "@com_google_googletest//googlemock:gmock_main"],
-)
-```
-
----
-
-## References
-- GitHub Repository: [https://github.com/google/googletest](https://github.com/google/googletest)
-- [Prerequisites & System Requirements](/getting-started/requirements-installation/prerequisites-system-requirements)
-- [Installing on Linux, macOS, and Windows](/getting-started/requirements-installation/installing-on-linux-macos-windows)
-- [Writing Your First Test Case](/getting-started/first-test-validation/writing-your-first-test)
-- [Troubleshooting Common Setup Issues](/getting-started/first-test-validation/troubleshooting-common-issues)
-
----
-
-## Callout
 <Tip>
-Remember, GoogleMock is included by default when you build GoogleTest from source unless explicitly disabled. Initializing GoogleMock using `testing::InitGoogleMock(&argc, argv);` also initializes GoogleTest, so you don't need to call both separately.
+For detailed platform-specific installation, troubleshooting, and integration guidance, consult the [Installation (All Platforms)](https://github.com/google/googletest/blob/main/docs/setup-prerequisites/installation-platforms.md) and [Integrating GoogleTest with Your Workflow](https://github.com/google/googletest/blob/main/docs/overview/concepts-architecture/integration-overview.md) guides.
 </Tip>
+
+---
+
+## 6. Best Practices & Tips
+
+- Prefer linking against `gmock_main` or `gtest_main` to simplify test executable setup unless you have custom initialization needs.
+- Always call `testing::InitGoogleMock()` or `testing::InitGoogleTest()` **before** running tests to parse flags and initialize the framework correctly.
+- Organize tests to leverage fixtures and parameterized testing for scalable test suites.
+- Keep your build environment hermetic and isolate third-party dependencies for reproducibility (especially with Bazel).
+
+---
+
+## 7. Next Steps
+
+After installation and setup:
+
+- Explore the [Writing Your First Test](https://github.com/google/googletest/blob/main/docs/guides/getting-started/writing-first-test.md) guide.
+- Learn about [Configuring & Integrating GoogleTest](https://github.com/google/googletest/blob/main/docs/getting-started/first-run-usage/configuration-integration.md).
+- Troubleshoot using [Troubleshooting & Quick Validation](https://github.com/google/googletest/blob/main/docs/getting-started/first-run-usage/troubleshooting-quick-validation.md).
+- Delve into mocking with GoogleMock in the [Creating and Using Mocks](https://github.com/google/googletest/blob/main/docs/guides/mocking-and-advanced-techniques/creating-and-using-mocks.md) guide.
+
+---
+
+## References & Further Reading
+
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) — Introduction to writing tests.
+- [GoogleMock README](https://github.com/google/googletest/blob/main/googlemock/README.md) — Overview of mocking framework.
+- [CMakeLists.txt](https://github.com/google/googletest/blob/main/googlemock/CMakeLists.txt) — Example build configuration.
+- [Testing main() implementations](https://github.com/google/googletest/blob/main/googletest/src/gtest_main.cc) — Reference source for main() used by gtest_main.
+- [GoogleMock main() implementation](https://github.com/google/googletest/blob/main/googlemock/src/gmock_main.cc) — Reference main() used by gmock_main.
+
+---
+
+By following this guide, you'll have GoogleTest and GoogleMock installed and integrated in your project, ready to create reliable and maintainable C++ tests with both frameworks.
