--- a/guides/getting-started/writing-first-test.mdx
+++ b/guides/getting-started/writing-first-test.mdx
@@ -1,184 +1,299 @@
 ---
-title: "Writing Your First Unit Test"
-description: "A hands-on walkthrough of creating your first test case using GoogleTest. You'll cover structuring tests, using basic assertions, and interpreting results. Perfect for immediately validating your code’s correctness."
+title: "Writing Your First Test"
+description: "A hands-on walkthrough of creating your first unit test. Introduces the basic test structure, test discovery, and assertion usage with real code examples, enabling users to quickly validate their code’s correctness."
 ---
 
-# Writing Your First Unit Test
+# Writing Your First Test
 
-A hands-on walkthrough of creating your first test case using GoogleTest. You'll cover structuring tests, using basic assertions, and interpreting results. Perfect for immediately validating your code’s correctness.
+A hands-on walkthrough of creating your first unit test using GoogleTest and GoogleMock. This guide introduces the basic structure of a test, how test discovery works, and how to use assertions effectively with real code examples to quickly validate your code's correctness.
 
 ---
 
-## 1. What You Will Accomplish
+## 1. What You Will Learn
 
-This guide walks you through the essential steps to write, compile, and run your first unit test using GoogleTest. You will:
-
-- Define a test case with the `TEST` macro.
-- Use basic assertion macros like `EXPECT_EQ`.
-- Compile your test code correctly linked to GoogleTest.
-- Run your test executable and interpret the output.
-
-By following these steps, you'll be able to create tests that verify your code correctness effectively.
+- How to write a basic test using the `TEST` macro.
+- How test discovery works automatically.
+- How to define and use mock classes with `MOCK_METHOD`.
+- How to set expectations on mock methods with `EXPECT_CALL`.
+- How to use assertions to verify test outcomes.
 
 ## 2. Prerequisites
 
-Before you start:
+- GoogleTest and GoogleMock libraries installed and properly set up in your build environment.
+- Basic knowledge of C++ syntax.
+- Familiarity with your project’s codebase that you want to test.
 
-- You have GoogleTest installed and properly integrated into your build system.
-- Your development environment is set up with a C++17-compliant compiler.
-- Basic knowledge of C++ syntax and compilation.
+If you're not yet set up, see [Installation and Setup](../../guides/getting-started/setup-installation) and [Configuring & Integrating GoogleTest](../../getting-started/first-run-usage/configuration-integration).
 
-Refer to the [Installation Guide](https://google.github.io/googletest/googletest-install.html) and [Setup & Integration](../guides/getting-started/setup-integration.md) if need to install or integrate GoogleTest.
+## 3. Expected Outcome
 
-## 3. Understanding GoogleTest Test Cases
+By completing this guide, you will have successfully written and run your first unit test and mock, verifying a simple piece of logic and understanding the core test structure in GoogleTest and GoogleMock.
 
-GoogleTest organizes tests into test cases and test suites. Each test case groups related tests.
+## 4. Time Estimate
 
-- The `TEST` macro defines a test with two parameters: a test case name and a test name.
-- Inside the test body, assertions verify that code behaves as expected.
+About 15-30 minutes, including writing the test code and running it.
 
-Example overview:
+## 5. Difficulty Level
 
-```cpp
-TEST(TestCaseName, TestName) {
-  // Your test code here
-  EXPECT_EQ(actual_value, expected_value);
-}
-```
+Beginner.
 
-## 4. Step-by-Step Guide to Writing Your First Test
+---
 
-<Steps>
-<Step title="Create a Test Source File">
-Create a new C++ source file for your test, e.g., `my_first_test.cpp`.
-</Step>
+# Step-by-Step Instructions
 
-<Step title="Include GoogleTest Header">
-At the top of your file, include the main GoogleTest header:
+Follow this sequence to write, understand, and run your first test.
+
+### Step 1: Define a Simple Test Case
+
+Create a test file (e.g., `my_first_test.cc`), and include GoogleTest headers.
 
 ```cpp
 #include <gtest/gtest.h>
-```
 
-This includes all necessary declarations for writing tests.
-</Step>
-
-<Step title="Write a Simple Test Case">
-Write your first test using the `TEST` macro. For instance, test a simple sum:
-
-```cpp
-TEST(ExampleTest, SimpleAddition) {
-  int result = 2 + 2;
-  EXPECT_EQ(result, 4) << "2 + 2 should equal 4";
+// Define a simple test.
+TEST(ExampleTest, SimpleCheck) {
+  int value = 42;
+  EXPECT_EQ(value, 42);  // Assertion
 }
 ```
 
-This test checks that `2 + 2` equals 4.
-</Step>
+- The `TEST` macro creates a test named `ExampleTest.SimpleCheck`.
+- `EXPECT_EQ` asserts that the two values are equal.
 
-<Step title="Compile the Test Program">
-Compile the test source code linking against the GoogleTest library.
+### Step 2: Build and Run Your Test
 
-If using `g++`, an example command:
+Compile the file linking with GoogleTest and GoogleMock libraries.
+Run the test binary, and observe output with passing tests.
 
-```bash
-g++ -std=c++17 -isystem /path/to/googletest/include -pthread \
-    my_first_test.cpp /path/to/libgtest.a /path/to/libgtest_main.a \
-    -o my_first_test
-```
-
-Adjust `/path/to/` according to your system's GoogleTest installation.
-
-If you use CMake, add GoogleTest as a target dependency and use `target_link_libraries()`.
-</Step>
-
-<Step title="Run the Test Binary">
-Execute your compiled test program:
-
-```bash
+```shell
 ./my_first_test
 ```
-
-You should see output like:
-
+Expected output:
 ```
-[==========] Running 1 test from 1 test case.
-[----------] Global test environment set-up.
-[----------] 1 test from ExampleTest
-[ RUN      ] ExampleTest.SimpleAddition
-[       OK ] ExampleTest.SimpleAddition (0 ms)
-[----------] 1 test from ExampleTest ran. (1 ms total)
-[==========] 1 test from 1 test case ran. (1 ms total)
+[ RUN      ] ExampleTest.SimpleCheck
+[       OK ] ExampleTest.SimpleCheck
 [  PASSED  ] 1 test.
 ```
 
-This confirms your test passed.
-
-</Step>
-
-<Step title="Interpret Test Failures">
-To see a failing test, intentionally cause the assertion to fail:
-
-```cpp
-TEST(ExampleTest, IntentionalFailure) {
-  EXPECT_EQ(2 + 2, 5) << "This test will fail.";
-}
-```
-
-Run the test binary to see detailed failure messages and line information, helping locate issues quickly.
-</Step>
-</Steps>
-
-## 5. Tips and Best Practices
-
-- **Keep tests focused and clear:** Each `TEST` should verify one specific behavior.
-- **Use descriptive names:** The test case and test names form the test's identity.
-- **Always include assertions:** Without assertions, tests can't validate functionality.
-- **Leverage `EXPECT_*` and `ASSERT_*` properly:** Use `EXPECT_*` when continuing after failure is safe, `ASSERT_*` to abort.
-- **Utilize test fixtures for setup:** Later, when tests share setup or teardown procedures.
-
-## 6. Troubleshooting Common Issues
-
-<AccordionGroup title="Common Problems When Writing and Running Your First Test">
-<Accordion title="Test Not Discovering or Running">
-Make sure your test source file compiles and links correctly with GoogleTest libraries. Check that `InitGoogleTest` or `InitGoogleMock` is called if handling initialization manually.
-</Accordion>
-<Accordion title="Linker Errors for GoogleTest Symbols">
-Verify you linked against `libgtest` and optionally `libgtest_main` (for main function).
-Ensure include paths and library paths match your GoogleTest installation.
-</Accordion>
-<Accordion title="Test Output is Empty or No Tests Run">
-Run with `--gtest_list_tests` to see which tests GoogleTest recognizes.
-Check that the test names conform to expected patterns.
-</Accordion>
-</AccordionGroup>
-
-## 7. Next Steps
-
-- Explore [Writing Your First Test](../getting-started/first-run-validation/writing-first-test.md) for more detailed initial test writing.
-- Learn about [Running Tests](../getting-started/first-run-validation/running-tests.md) to understand advanced execution and output options.
-- Dive into [Using Mocks](../guides/mocking-and-advanced-techniques/creating-and-using-mocks.md) when you want to mock dependencies.
-- Consult [Test Organization Best Practices](../guides/core-testing-workflows/test-organization-best-practices.md) to structure larger test suites efficiently.
-
 ---
 
-## Appendix: Minimal Complete Example
+### Step 3: Define a Mock Class
+
+Mock a simple interface by inheriting from it and using `MOCK_METHOD` macros.
+
+Given an interface:
+
+```cpp
+class Foo {
+ public:
+  virtual ~Foo() = default;
+  virtual int GetSize() const = 0;
+  virtual bool Process(int n) = 0;
+};
+```
+
+Define a mock:
+
+```cpp
+#include <gmock/gmock.h>
+
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(bool, Process, (int n), (override));
+};
+```
+
+Note:
+- Return type
+- Method name
+- Argument list syntax
+- Use `(const, override)` for const override methods
+
+### Step 4: Set Expectations and Default Behaviors
+
+Use `EXPECT_CALL` to specify how `MockFoo` methods are expected to be called.
 
 ```cpp
 #include <gtest/gtest.h>
+using ::testing::Return;
 
-// Simple test to check arithmetic.
-TEST(SimpleMathTest, Addition) {
-  int sum = 1 + 1;
-  EXPECT_EQ(sum, 2);
-}
+TEST(MockFooTest, ProcessWorks) {
+  MockFoo mock;
 
-int main(int argc, char** argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
+  // Set default action for GetSize()
+  ON_CALL(mock, GetSize()).WillByDefault(Return(10));
+
+  // Expect Process(5) to be called once and return true.
+  EXPECT_CALL(mock, Process(5)).WillOnce(Return(true));
+
+  EXPECT_EQ(mock.GetSize(), 10);          // Will use ON_CALL
+  EXPECT_TRUE(mock.Process(5));           // Must match EXPECT_CALL
 }
 ```
 
-Compile and run as shown in previous sections to verify your setup and understanding.
+### Step 5: Run the Mocked Test
+
+Build and run to verify the expectations.
+
+If `Process(5)` is not called, the test will fail.
+
+```shell
+[ RUN      ] MockFooTest.ProcessWorks
+[       OK ] MockFooTest.ProcessWorks
+[  PASSED  ] 1 test.
+```
 
 ---
+
+# Understanding Test Discovery
+
+GoogleTest automatically discovers tests defined with `TEST` or `TEST_F` macros by scanning the binary for registered test cases. You don’t need to manually register or run tests.
+
+### How to Run Selected Tests
+
+- You can run specific tests by name using the `--gtest_filter` flag:
+
+```shell
+./my_test_binary --gtest_filter=MockFooTest.ProcessWorks
+```
+
+---
+
+# Assertions Overview
+
+GoogleTest provides assertions for validating test conditions; `EXPECT` macros continue after failure, while `ASSERT` macros abort the test at failure.
+
+For your first test, `EXPECT_EQ(expected, actual)` is the recommended starting point.
+
+Other useful assertions:
+
+- `EXPECT_TRUE(condition)` / `EXPECT_FALSE(condition)`
+- `EXPECT_NE(val1, val2)` (not equal)
+- `EXPECT_LT(val1, val2)` (less than)
+- `EXPECT_THROW(statement, exception_type)`
+
+For a full list, see [Assertions Reference](../../api_reference/core_test_apis/assertions_reference).
+
+---
+
+# Practical Tips & Best Practices
+
+- Set expectations **before** exercising code.
+- Use `_` matcher as a wildcard to ignore irrelevant arguments.
+- Use `ON_CALL` to define default behaviors without expectations.
+- Use `NiceMock` or `StrictMock` to tailor treatment of uninteresting calls.
+- Prefer explicit cardinalities with `.Times()` when you need to verify call counts.
+
+---
+
+# Common Pitfalls and Troubleshooting
+
+<AccordionGroup title="Common Issues While Writing Your First Test">
+<Accordion title="Test Not Discovered or Run">
+Check that your test binary is linked with GoogleTest and that you use the `TEST` or `TEST_F` macros. Ensure your build system compiles the test source.
+</Accordion>
+<Accordion title="Tests Fail Due to Unsatisfied Expectations">
+Verify that your code calls all expected mock methods with the correct arguments and number of times. Use `--gmock_verbose=info` to trace mock calls.
+</Accordion>
+<Accordion title="Uninteresting Mock Call Warning">
+If you see warnings about uninteresting calls, consider using `EXPECT_CALL(...).Times(AnyNumber())` for those methods or use `NiceMock`.
+</Accordion>
+</AccordionGroup>
+
+---
+
+# Next Steps & Further Learning
+
+- Explore [Writing Your First Test & Mock](../../getting-started/first-run-usage/writing-first-test) for a comprehensive example.
+- Learn about [Organizing and Discovering Tests](../../guides/core-testing-patterns/organizing-tests) to manage larger projects.
+- Advance to [Creating and Using Mocks](../../guides/mocking-and-advanced-techniques/creating-and-using-mocks) to master mocking techniques.
+- Use [Assertions Best Practices](../../guides/core-testing-patterns/assertions-best-practices) to write effective checks.
+
+---
+
+# Sample Minimal Test File
+
+```cpp
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
+
+class Foo {
+ public:
+  virtual ~Foo() = default;
+  virtual int GetValue() const = 0;
+};
+
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetValue, (), (const, override));
+};
+
+TEST(FooTest, ReturnsExpectedValue) {
+  MockFoo mock_foo;
+  ON_CALL(mock_foo, GetValue()).WillByDefault(testing::Return(42));
+  EXPECT_CALL(mock_foo, GetValue()).Times(1);
+
+  int val = mock_foo.GetValue();
+  EXPECT_EQ(val, 42);
+}
+```
+
+Compile and run:
+
+```shell
+$ g++ -std=c++17 my_test.cc -lgtest -lgmock -pthread -o my_test
+$ ./my_test
+```
+
+---
+
+# Summary
+
+This guide equipped you with the foundational knowledge to write your first unit test and mock using GoogleTest and GoogleMock. You learned the basic test and mock structure, how to set expectations, use assertions, and troubleshoot common issues.
+
+---
+
+# References
+
+- [GoogleTest Primer](../../getting-started/first-run-usage/writing-first-test)
+- [GoogleMock Cheat Sheet](../../docs/gmock_cheat_sheet.md)
+- [GoogleMock Cookbook](../../docs/gmock_cook_book.md)
+- [Mocking Reference](../../docs/reference/mocking.md)
+- [GoogleTest Assertions Reference](../../api_reference/core_test_apis/assertions_reference)
+
+For more examples and detailed usage, explore these linked resources.
+
+---
+
+# Tips
+
+<Tip>
+Always place `EXPECT_CALL` before invoking the actual function to avoid undefined behavior.
+</Tip>
+<Tip>
+Use `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` to allow calls without producing warnings.
+</Tip>
+<Note>
+If your mock method returns a non-default-constructible object, you must specify an action returning a valid object to avoid runtime errors.
+</Note>
+
+---
+
+# Diagram: Simple Test Flow
+
+```mermaid
+flowchart TD
+  Start([Start]) --> WriteTest["Write test using TEST macro"]
+  WriteTest --> Compile["Compile test executable"]
+  Compile --> RunTests["Run test executable"]
+  RunTests --> TestDiscovered{Tests discovered?}
+  TestDiscovered -- Yes --> TestsPass{Tests pass?}
+  TestDiscovered -- No --> FailDiscovery["Check setup & linkage"]
+  TestsPass -- Yes --> Done([Done: success])
+  TestsPass -- No --> FailTest["Check test output, debug failures"]
+  FailDiscovery --> End([End])
+  FailTest --> End
+```
+
+This flow helps visualize the basic journey from writing your first test to verifying its success.
